<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
              android:orientation="vertical"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_user_new"
              tools:context=".activity.UserNew">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_new_user_forname" android:hint="@string/txtFirstname"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/txtLastname"
            android:ems="10"
            android:id="@+id/txt_new_user_lastname"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/txtEMail"
            android:ems="10"
            android:id="@+id/txt_new_user_email"/>
    <Button
            android:text="@string/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btn_saveNewUser"/>
    <Button
            android:text="@string/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btn_saveDeleteUser"/>
</LinearLayout>
