<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_parcour_new"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".activity.ParcourNew">

    <TextView
        android:id="@+id/txt_create_parcour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_parcour"
        android:textAlignment="center"
        android:textStyle="normal|bold" />

    <ScrollView
        android:id="@+id/scv_create_parcour_new"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_new_parcour_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="55dp"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/hintName"
                android:inputType="textPersonName"
                android:nextFocusDown="@+id/txt_new_parcour_target_count"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/txt_new_parcour_target_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/count_targets"
                android:inputType="number"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_score_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Score Type"
                android:textAlignment="center"
                android:textStyle="normal|bold" />

            <Spinner
                android:id="@+id/sp_score_type_parcoure_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_create_new_parcour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnCreate" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
