<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lv_item_parcour"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!--android:descendantFocusability="blocksDescendants"-->

    <TextView
        android:id="@+id/pacour_nr_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10px"
        android:layout_weight="1"
        android:clickable="false"
        android:ems="2"
        android:focusable="false"
        android:inputType="text"
        android:text="@string/nr"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lv_pacour_nr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/pacour_nr_txt"
        android:ems="2"
        android:focusable="false"
        android:inputType="number" />

    <TextView
        android:id="@+id/lv_pacour_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lv_pacour_nr"
        android:layout_weight="1"
        android:ems="5"
        android:focusable="false"
        android:inputType="text"
        android:text="@string/hintName" />

    <TextView
        android:id="@+id/lv_pacour_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lv_pacour_name_txt"
        android:layout_weight="1"
        android:ems="4"
        android:focusable="false"
        android:inputType="text" />

    <ImageButton
        android:id="@+id/lv_btn_delete_Parcour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10px"
        android:focusable="false"
        app:srcCompat="@android:drawable/ic_delete" />


    <TextView
        android:id="@+id/count_targets_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lv_count_targets"
        android:layout_alignBottom="@+id/lv_count_targets"
        android:layout_alignParentLeft="@+id/pacour_nr_txt"
        android:layout_marginLeft="5dp"
        android:focusable="false"
        android:inputType="text"
        android:text="@string/count_targets" />

    <TextView
        android:id="@+id/lv_count_targets"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv_pacour_name"
        android:layout_toRightOf="@+id/count_targets_txt"
        android:layout_marginLeft="10dp"
        android:focusable="false"
        android:inputType="number" />


</RelativeLayout>

